--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -13,9 +13,14 @@
    
    <color name="white_translucent">#D8FFFFFF</color>
    <color name="white_more_translucent">#66FFFFFF</color>
+ <color name="white_light_grey">#FAFAFA</color>
+ <color name="white_light_more_grey">#F3F3F3</color>
    
    <color name="black_translucent">#77000000</color>
     <color name="black_translucent_level_2">#55000000</color>
+
+
+ <color name="black_text_grey">#4C4C4C</color>
    
    
    
