ArrivedState: ledger payment status and status string fetched from server and shown to server

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
@@ -123,6 +123,18 @@
 
 
             <TextView
+                android:id="@+id/textViewStatusString"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20px"
+                android:layout_marginTop="10px"
+                android:singleLine="true"
+                android:text="Status"
+                android:textColor="@color/bg_grey_opaque"
+                android:textSize="30px"/>
+
+
+            <TextView
                 android:id="@+id/textViewBalance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
